--- a/design-blocks/index.html
+++ b/design-blocks/index.html
@@ -17,11 +17,11 @@
         <block type="filter_tasks"></block>
         <block type="sort_tasks"></block>
       </xml>
-      <script>
+      <script src="custom_blocks.js"></script>
+    <script>
         // Initialize Blockly
         var workspace = Blockly.inject('blocklyDiv', {
-          toolbox: document.getElementById('toolbox')
-        });
+          toolbox: document.getElementById('toolbox')});
     </script>
 </body>
 </html>
