--- a/design-blocks/index.html
+++ b/design-blocks/index.html
@@ -23,7 +23,7 @@
     <script src="custom_blocks.js"></script>
     <script>
         var workspace = Blockly.inject('blocklyDiv',
-            {toolbox: document.getElementById('toolbox')});
+            {toolbox: document.getElementById('toolbox'),
             scrollbars: true
         });
 
