--- a/design-blocks/index.html
+++ b/design-blocks/index.html
@@ -18,6 +18,9 @@
         <block type="filter_tasks"></block>
         <block type="sort_tasks"></block>
       </category>
+      <category name="Text">
+        <block type="text"></block>
+      </category>
     </xml>
     <div class="row button-row">
         <button onclick="generateCode()">Generate JavaScript</button>
