--- a/test/index.html
+++ b/test/index.html
@@ -11,7 +11,7 @@
   <div id="blocklyDiv" style="height: 480px; width: 600px;"></div>
   <button onclick="generateCode()">Generate Code</button>
   <xml id="toolbox" style="display: none;">
-    <!-- Toolbox definition -->
+      <block type="create_task"></block>
   </xml>
   <script>
     var workspace = Blockly.inject('blocklyDiv',
