--- a/test/index.html
+++ b/test/index.html
@@ -12,6 +12,7 @@
   <button onclick="generateCode()">Generate Code</button>
   <xml id="toolbox" style="display: none;">
       <block type="create_task"></block>
+      <block type="task_details"></block>
   </xml>
   <script>
     var workspace = Blockly.inject('blocklyDiv',
