--- a/test/index.html
+++ b/test/index.html
@@ -13,6 +13,7 @@
   <xml id="toolbox" style="display: none;">
       <block type="create_task"></block>
       <block type="task_details"></block>
+      <block type="string"></block>
   </xml>
   <script>
     var workspace = Blockly.inject('blocklyDiv',
