--- a/test/index.html
+++ b/test/index.html
@@ -18,7 +18,8 @@
   </div>
    <div class="row button-row">
         <button onclick="generateCode()">Generate JavaScript</button>
-  <div class="row">
+   </div>
+    <div class="row">
         <div id="codeDiv" class="half-width"></div>
         <div id="outputDiv" class="half-width"></div>
     </div>
