--- a/test/index.html
+++ b/test/index.html
@@ -2,10 +2,9 @@
 <html>
 <head>
   <title>Task Management Blockly</title>
-  <script src="https://unpkg.com/blockly/blockly_compressed.js"></script>
-  <script src="https://unpkg.com/blockly/blocks_compressed.js"></script>
-  <script src="https://unpkg.com/blockly/javascript_compressed.js"></script>
+  <script src="https://unpkg.com/blockly/blockly_min.js"></script>
   <script src="custom_blocks.js"></script>
+  <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
   <div class="row">
