--- a/test/index.html
+++ b/test/index.html
@@ -17,6 +17,7 @@
     </div>
     <div class="row button-row">
         <button onclick="generateCode()">Generate Code</button>
+        <button onclick="runCode()">Run Code</button>
     </div>
     <div class="row">
         <div id="codeDiv" class="half-width"></div>
