added date block

--- a/emilytest/index.html
+++ b/emilytest/index.html
@@ -21,6 +21,7 @@
       <category name="Text">
         <block type="text"></block>
       </category>
+      <block type="custom_blocks"></block>
     </xml>
     <div class="row button-row">
         <button id="generateCodeButton">Generate Code</button>
