--- a/emilytest/index.html
+++ b/emilytest/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <div id="blocklyDiv" style="height: 480px; width: 600px;"></div>
+
+    <!-- toolbox -->
     <xml id="toolbox" style="display: none;">
       <category name="Tasks">
         <block type="create_task"></block>
@@ -24,60 +26,64 @@
         <block type="custom_date"></block>
       </category>
     </xml>
+
     <div class="row button-row">
-        <button id="generateCodeButton">Generate Code</button>
+        <button onclick="generateCode()">Generate JavaScript</button>
+        <button onclick="saveBlocks()">Save Blocks</button>
     </div>
+
     <div class="row">
         <div id="codeDiv" class="half-width"></div>
         <div id="outputDiv" class="half-width"></div>
     </div>
-        <!-- Define your other blocks here -->
+
     <script>
-        var workspace = Blockly.inject('blocklyDiv',
-            {toolbox: document.getElementById('toolbox'),
-            scrollbars: true
+        var workspace = Blockly.inject('blocklyDiv', {
+          toolbox: document.getElementById('toolbox'),
+          scrollbars: true
         });
 
         // Add event listener to the generate code button
-  const generateCodeButton = document.getElementById('generateCodeButton');
-  generateCodeButton.addEventListener('click', generateCode);
+  // const generateCodeButton = document.getElementById('generateCodeButton');
+  // generateCodeButton.addEventListener('click', generateCode);
 
   // Function to generate code
   function generateCode() {
-    // Retrieve the input values from the Blockly blocks
-    const taskName = Blockly.JavaScript.valueToCode(workspace, 'task_name', Blockly.JavaScript.ORDER_ATOMIC);
-    const taskDescription = Blockly.JavaScript.valueToCode(workspace, 'task_description', Blockly.JavaScript.ORDER_ATOMIC);
-    const dueDate = Blockly.JavaScript.valueToCode(workspace, 'due_date', Blockly.JavaScript.ORDER_ATOMIC);
-
-    // Format the input values into a code string
-    const code = `createTask("${taskName}", "${taskDescription}", "${dueDate}");`;
-
-    // Display the generated code
-    const codeOutput = document.getElementById('codeOutput');
-    codeOutput.textContent = code;
+      var code = Blockly.JavaScript.workspaceToCode(workspace);
+      document.getElementById('codeDiv').innerText = code;
   }
 
-  // Function to create a task
-  function createTask(taskName, taskDescription, dueDate) {
-    // Add your code here to create the task with the relevant information
-    console.log(`Task created: ${taskName}`);
-    console.log(`Task description: ${taskDescription}`);
-    console.log(`Due date: ${dueDate}`);
+  function saveBlocks() {
+      var xml = Blockly.Xml.workspaceToDom(workspace);
+      var xmlText = Blockly.Xml.domToPrettyText(xml);
+      var blob = new Blob([xmlText], {type: 'text/xml'});
+      var a = document.createElement('a');
+      a.download = 'blocks.xml';
+      a.href = URL.createObjectURL(blob);
+      a.click();
   }
-        function generateCode() {
-            var code = Blockly.JavaScript.workspaceToCode(workspace);
-            document.getElementById('codeDiv').innerText = code;
-        }
 
-        function runCode() {
-            var code = Blockly.JavaScript.workspaceToCode(workspace);
-            try {
-                var output = eval(code);
-                document.getElementById('outputDiv').innerText = output;
-            } catch (e) {
-                document.getElementById('outputDiv').innerText = 'Error: ' + e;
-            }
-        }
-    </script>
+  // // Function to create a task
+  // function createTask(taskName, taskDescription, dueDate) {
+  //   // Add your code here to create the task with the relevant information
+  //   console.log(`Task created: ${taskName}`);
+  //   console.log(`Task description: ${taskDescription}`);
+  //   console.log(`Due date: ${dueDate}`);
+  // }
+  // function generateCode() {
+  //     var code = Blockly.JavaScript.workspaceToCode(workspace);
+  //     document.getElementById('codeDiv').innerText = code;
+  // }
+
+  // function runCode() {
+  //     var code = Blockly.JavaScript.workspaceToCode(workspace);
+  //     try {
+  //         var output = eval(code);
+  //         document.getElementById('outputDiv').innerText = output;
+  //     } catch (e) {
+  //         document.getElementById('outputDiv').innerText = 'Error: ' + e;
+  //     }
+  // }
+  </script>
 </body>
 </html>
