Revision to resizable Blockly code-currently resize is needed to display Blockly properly.

--- a/src/index.html
+++ b/src/index.html
@@ -3,26 +3,13 @@
 <head>
     <title>TaskFlow</title>
     <script src="https://unpkg.com/blockly/blockly.min.js"></script>
-    <script src="custom_blocks.js"></script>
-    <!-- Include Blockly library -->
-    <script src="blockly_compressed.js"></script>
+    <script src="./custom_blocks.js"></script>
     <!-- Include Blockly JavaScript generator -->
-    <script src="blocks_compressed.js"></script>
+    <!-- <script src="https://unpkg.com/blockly/blocks_compressed.js"></script> -->
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
     <table>
-      <tr>
-        <td>
-          <p>
-            Once an <a href="index.html">area is defined</a>, Blockly can be
-            injected and positioned over the area.
-            A resize handler keeps it in position as the page changes.
-          </p>
-
-          <p>&rarr; More info on <a href="https://developers.google.com/blockly/guides/configure/web/resizable">injecting resizable Blockly</a>&hellip;</p>
-        </td>
-      </tr>
       <tr>
         <td id="blocklyArea">
         </td>
