--- a/testingstuffwilldeletelater/index.html
+++ b/testingstuffwilldeletelater/index.html
@@ -48,11 +48,10 @@
     <xml id="toolbox" style="display: none">
         <!-- Task Category -->
         <category name="Tasks" colour="#FF8C1A">
-            <block type="task"></block>
-            <block type="priority"></block>
-            <block type="due_date"></block>
-            <block type="assign_to"></block>
-            <block type="create_task"></block>
+            <block type="restartDB"></block>
+            <block type="initializeDB"></block>
+            <block type="updateTask"></block>
+            <block type="addTask"></block>
         </category>
     </xml>
       
