--- a/testingstuffwilldeletelater/index.html
+++ b/testingstuffwilldeletelater/index.html
@@ -21,6 +21,7 @@
         <block type="initialize_database"></block>
         <block type="create_task"></block>
         <block type="update_task"></block>
+        <block type="text"></block>
       </category>
     </xml>
 
